--- a/app/src/main/res/layout/notifity.xml
+++ b/app/src/main/res/layout/notifity.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/screen">
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,18 +13,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_margin="10dp"
             android:orientation="horizontal">
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
 
                 android:id="@+id/notify_header"
-                android:src="@drawable/icon"/>
+                android:src="@drawable/pander"/>
             <TextView
                 android:layout_marginLeft="5dp"
                 android:layout_gravity="center_vertical"
-                android:textSize="18dp"
+                android:textColor="#000000"
+                android:textSize="22dp"
                 android:layout_width="match_parent"
                 android:id="@+id/notify_title"
                 android:text="dsagdsakdjjgakshsakjga"
@@ -35,9 +36,20 @@
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
-            android:layout_margin="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_margin="20dp"
+            android:textColor="#000000"
+            android:textSize="18dp"
             android:id="@+id/notify_des"
+            android:text="dsgsadgasgadsfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffdsads"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_margin="20dp"
+            android:autoLink="all"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:id="@+id/notify_url"
             android:text="dsgsadgasgadsfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffdsads"
             android:layout_marginTop="5dp"
             android:layout_height="wrap_content" />
